@@ -2,11 +2,12 @@
 NT: End of active development.
     Support and maintenance remain active.
 BF: Review: Optimization and corrections
-BF: CGI: Optimization and corrections
+CR: HTTP(S) CGI: Optimization and corrections
     - Optimization in enforcing the end of the process
     - Optimization in the analysis of the exit code now consistently leads to
       status 502 in the access log and, if no header has been sent yet, also as
       HTTP status.   
+CR: HTTP(S) Directory Index: Optimization and corrections
 CR: Review: Initialize refactored in Settings
 ??: Facelift: Status / Index / Templates
 ??: Review: Optimization and corrections
